--- a/wercker.yml
+++ b/wercker.yml
@@ -30,9 +30,14 @@ deploy:
     id: node:4-slim
 
   steps:
+    - install-packages:
+        packages: git
     - npm-install:
-        options: -g
+        options: -g rimraf gitbook-cli
     - script:
-        name: generate docs
+        name: Generate docs
         code: |
-          npm run docs:publish
+          npm run docs:build
+    - lukevivier/gh-pages:
+        token: $GITHUB_TOKEN
+        basedir: _book
